src/objects/Loan_Disbursement__c.object
<CustomObject>
    <description>This object contains information for loan disbursements including requests for such and the results of such.</description>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Loan disbursement amount</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applicant__c</fullName>
        <label>Applicant</label>
        <referenceTo>Applicant__c</referenceTo>
        <relationshipLabel>Loan Disbursements</relationshipLabel>
        <relationshipName>Loan_Disbursements</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Check_Mailed_to_PDC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For disaster loans, whether the check was sent to the PDC (Checked=Sent to PDC, Unchecked= Otherwise).</description>
        <label>Check Mailed to PDC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disbursement_Status__c</fullName>
        <label>Disbursement Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Disbursement Requested</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Disbursed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disbursement_Type__c</fullName>
        <label>Disbursement Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initial Full</fullName>
                </value>
                <value>
                    <fullName>Initial Partial</fullName>
                </value>
                <value>
                    <fullName>Subsequent Full</fullName>
                </value>
                <value>
                    <fullName>Susequent Partial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ETran_Control_Number__c</fullName>
        <label>ETran Control Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ETran_Schedule_Number__c</fullName>
        <label>ETran Schedule Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ETran_Scheduled_Disbursement_Date__c</fullName>
        <label>ETran Scheduled Disbursement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Installment_Date__c</fullName>
        <description>Date of next installment</description>
        <label>Installment Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loan_Undisbursed_Amount__c</fullName>
        <label>Loan Undisbursed Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan__c</fullName>
        <label>Loan</label>
        <referenceTo>Loan__c</referenceTo>
        <relationshipLabel>Loan Disbursements</relationshipLabel>
        <relationshipName>Loan_Disbursements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACH</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Loan Disbursement</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Loan Disbursement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Disbursements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>